--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+
+<head>
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WCHWRQK');</script>
+  <!-- End Google Tag Manager -->
+
+
+
+  <meta charset="utf-8" />
+  <title>Raio Desentupidora - Desentupidora 24 horas - Faça seu orçamento agora mesmo</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="preload" as="font" href="fonts/flaticon/font/Flaticon.woff" type="font/woff2" crossorigin="anonymous">
+
+  <link async rel="stylesheet" href="https://d36p6ty9wanxdj.cloudfront.net/css/animate.css" media="screen">
+  <link async rel="stylesheet" href="https://d36p6ty9wanxdj.cloudfront.net/css/font.css" media="screen">
+  <link async rel="stylesheet" href="css/flaticon.css" media="screen">
+  <link async rel="stylesheet" href="https://d36p6ty9wanxdj.cloudfront.net/css/owl.carousel.min.css" media="screen">
+  <link async rel="stylesheet" href="https://d36p6ty9wanxdj.cloudfront.net/css/owl.theme.default.min.css"
+    media="screen">
+  <!-- <link rel="stylesheet" href="https://d36p6ty9wanxdj.cloudfront.net/css/magnific-popup.css"> -->
+
+  <link async rel="stylesheet" href="https://d36p6ty9wanxdj.cloudfront.net/css/style.css" media="screen">
+
+  <meta name="description"
+    content="A Raio Desentupidora atua no mercado de dentupimento de pia, ralo, vaso sanitário, esgoto, caixas de gordura e entre outros serviços que prezam pela sua saúde!">
+  <meta name="keywords"
+    content="Desentupidora Zona Norte,Desentupimento Zona Sul,Raio Desentupidora,desentupimento,manutenção predial,encanamento,desentupidora,desentupir vaso,desentupir pia,desentupidor de vaso,desentupir privada,desentupimentos,vaso entupido,desentupidora preço,desentupir esgoto,desentupidora zona leste,desentupidora de vaso,desentupidora na zona leste,desentupidora em são paulo,desentupir rede de esgoto,empresa de desentupimento,desentupimentos de esgotos,desentupir encanamento,desentupidora 24h,telefone de desentupidora,desentupidor de vaso preço,desentupidor de banheiro,serviços de manutenção predial,preço para desentupir vaso sanitario,desentupidora 24 horas zona leste">
+  <meta name="geo.position" content="-23.428520, -46.550968">
+  <meta name="geo.placename" content="Guarulhos-São Paulo">
+  <meta name="geo.region" content="SP-BR">
+  <meta name="ICBM" content="-23.428520, -46.550968">
+  <meta name="robots" content="index, follow">
+  <meta name="rating" content="General">
+  <meta name="revisit-after" content="7 days">
+  <meta name="author" content="Raio Desentupidora">
+  <link rel="canonical" href="https://www.raiodesentupidora.com.br/">
+  <link rel="shortcut icon" href="https://d36p6ty9wanxdj.cloudfront.net/images/favicon.png">
+  <meta property="og:region" content="Brasil">
+  <meta property="og:title" content="Raio Desentupidora">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://www.raiodesentupidora.com.br/">
+  <meta property="og:description"
+    content="A Raio Desentupidora atua no mercado de desentupimento em Geral e entre outros serviços que prezam pela sua saúde!">
+  <meta property="og:site_name" content="Raio Desentupidora">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="https://www.raiodesentupidora.com.br/">
+  <meta name="twitter:title" content="Raio Desentupidora">
+  <meta name="twitter:description"
+    content="A Raio Desentupidora atua no mercado de desentupimento em Geral e entre outros serviços que prezam pela sua saúde!">
+
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +69,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +85,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
